<resources>
    <string name="app_name">MusicTraining</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chordDrill">Settings</string>
    <string name="time_constraint">Time constraint</string>
    <string name="metronome">Metronome</string>
    <string name="rapid_fire">Rapid fire</string>
    <string name="metronome_explanation">play a unit of music per a fixed unit of time</string>
    <string name="rapid_fire_explanation">play as many of a musical unit as possible</string>
    <string name="scale_mode">Scale mode</string>
    <string name="chord_mode">Chord mode</string>
    <string name="chord_mode_explanation">play full chord</string>
    <string name="scale_mode_explanation">play scales up and down</string>
    <string name="mode">Mode</string>
    <string name="notes_per_beat">Notes per beat</string>
    <string name="interval_requirements">Interval requirements</string>
    <string name="none">None</string>
    <string name="less_than">Less than</string>
    <string name="greater_than">Greater than</string>
    <string name="inversions">Inversion(s)</string>
    <string name="root_position">Root position</string>
    <string name="first_inversion">First inversion</string>
    <string name="second_inversion">Second inversion</string>
    <string name="third_inversion">Third inversion</string>
    <string name="dominant_7th_sus_4th">Dominant 7th, Sus 4th</string>
    <string name="augmented_major_7th">Augmented Major 7th</string>
    <string name="augmented_7th">Augmented 7th</string>
    <string name="full_diminished_7th">Full Diminished 7th</string>
    <string name="half_diminished_7th">Half Diminished 7th</string>
    <string name="minor_major_7th">Minor Major 7th</string>
    <string name="minor_7th">Minor 7th</string>
    <string name="major_7th">Major 7th</string>
    <string name="dominant_7th">Dominant 7th</string>
    <string name="sus_4_triad">Sus 4 triad</string>
    <string name="sus_2_triad">Sus 2 triad</string>
    <string name="augmented_triad">Augmented triad</string>
    <string name="diminished_triad">Diminished triad</string>
    <string name="minor_triad">Minor triad</string>
    <string name="major_triad">Major triad</string>
    <string name="doubled_notes_explanation">specifying the amount of notes that can be doubled when playing a chord</string>
    <string name="note_doubling_requirement">Note doubling requirement</string>
    <string name="closed">Closed voicing</string>
    <string name="open">Open voicing</string>
    <string name="choose_voicing_spacing_requirement">Choose spacing requirement</string>
    <string name="require_voice_leading">Require voice leading</string>
    <string name="voice_leading_explanation">either top or bottom note move stepwise or be a common tone</string>
    <string name="require_common_top_note">Require common top note</string>
    <string name="require_common_bottom_note">Require common bottom note</string>
    <string name="will_limit_chord_set">will limit chord set</string>
    <string name="require_leap_p5">Require leap greater than a perfect 5</string>
    <string name="add_register_requirements">Add register requirements</string>
    <string name="ab_minor">Ab minor</string>
    <string name="ab_major">Ab major</string>
    <string name="g_minor">G minor</string>
    <string name="g_major">G major</string>
    <string name="fs_minor">F# minor</string>
    <string name="fs_major">F# major</string>
    <string name="f_minor">F minor</string>
    <string name="f_major">F major</string>
    <string name="e_minor">E minor</string>
    <string name="e_major">E major</string>
    <string name="eb_minor">Eb minor</string>
    <string name="eb_major">Eb major</string>
    <string name="d_minor">D minor</string>
    <string name="d_major">D major</string>
    <string name="db_minor">Db minor</string>
    <string name="db_major">Db major</string>
    <string name="c_minor">C minor</string>
    <string name="c_major">C major</string>
    <string name="bb_minor">Bb minor</string>
    <string name="b_minor">B minor</string>
    <string name="bb_major">Bb major</string>
    <string name="a_minor">A minor</string>
    <string name="a_major">A major</string>
    <string name="in_fourths">In fourths</string>
    <string name="in_fifths">In fifths</string>
    <string name="chromatic">Chromatic</string>
    <string name="prefer_most_difficult">Prefer most difficult</string>
    <string name="_12_tone_row">12-tone row</string>
    <string name="pattern">Pattern</string>
    <string name="random">Random</string>
    <string name="algorithm_for_prompts">Algorithm for prompts</string>
    <string name="keys">Keys</string>
    <string name="chord_qualities">Chord qualities</string>
    <string name="major_keys">Major keys</string>
    <string name="minor_keys">Minor keys</string>
    <string name="empty_edit_text">-</string>
    <string name="start_drill">Start drill</string>
    <string name="saved_drills">Saved drills</string>
    <string name="start_chord_drill">Start new chord drill</string>
    <string name="start_scale_drill">Start new scale drill</string>
    <string name="scale_settings">Configure scale drill</string>
    <string name="save_drill">Save drill</string>
    <string name="re_configure">Re-configure drill</string>
    <string name="chord_settings">Configure chord drill</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>