<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/settings_category_background"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/half_default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_register_requirements"
            android:id="@+id/title" />


    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <RadioButton
                android:text="@string/none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/none" />

        <RadioButton
                android:text="@string/require_voice_leading"
                android:tooltipText="@string/voice_leading_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/voice_leading" />

        <RadioButton
                android:text="@string/require_common_top_note"
                android:tooltipText="@string/will_limit_chord_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/common_top_note" />

        <RadioButton
                android:text="@string/require_common_bottom_note"
                android:tooltipText="@string/will_limit_chord_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/common_bottom_note" />

        <RadioButton
                android:text="@string/require_leap_p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/leap_greater_than" />
    </RadioGroup>
</LinearLayout>