<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/settings_category_background"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/half_default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_requirements"
            android:id="@+id/choose_mode_title" />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radio_group">

        <RadioButton
                android:text="@string/none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/scale_mode_explanation"
                android:id="@+id/none_button" />


        <RadioButton
                android:text="@string/less_than"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/scale_mode_explanation"
                android:id="@+id/less_than_button" />

        <RadioButton
                android:text="@string/greater_than"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/chord_mode_explanation"
                android:id="@+id/greater_than_button" />
    </RadioGroup>

    <include layout="@layout/number_selector" />

</LinearLayout>