<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/settings_category_background"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/half_default_margin"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:text="@string/keys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title" />


    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/major_keys_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="Major keys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/major_keys_chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/a_major"
                    android:id="@+id/a_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/bb_major"
                    android:id="@+id/bb_major" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/c_major"
                    android:id="@+id/c_major" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/db_major"
                    android:id="@+id/db_major" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/d_major"
                    android:id="@+id/d_major" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/eb_major"
                    android:id="@+id/eb_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/e_major"
                    android:id="@+id/e_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/f_major"
                    android:id="@+id/f_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/fs_major"
                    android:id="@+id/fs_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/g_major"
                    android:id="@+id/g_major" />


            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/ab_major"
                    android:id="@+id/ab_major" />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/minor_keys_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/major_keys_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="Minor keys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

        <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minor_keys_chipgroup">

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/a_minor"
                    android:id="@+id/a_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/bb_minor"
                    android:id="@+id/bb_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/e_minor"
                    android:id="@+id/e_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/c_minor"
                    android:id="@+id/c_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/fs_minor"
                    android:id="@+id/fs_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/g_minor"
                    android:id="@+id/g_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/ab_minor"
                    android:id="@+id/ab_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/f_minor"
                    android:id="@+id/f_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/db_minor"
                    android:id="@+id/db_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/eb_minor"
                    android:id="@+id/eb_minor" />

            <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:checkable="true"
                    android:checked="true"
                    android:layout_width="@dimen/key_chip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/d_minor"
                    android:id="@+id/d_minor" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>


</LinearLayout>