<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/primary_foreground"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:text="@string/algorithm_for_prompts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_heading"
            android:id="@+id/title" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        <RadioGroup
                android:id="@+id/algorithm_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:text="@string/random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/random_button" />

            <RadioButton
                    android:text="@string/pattern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pattern_button" />

        </RadioGroup>


        <RadioGroup
                android:id="@+id/pattern_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:text="@string/chromatic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/chromatically_button" />

            <RadioButton
                    android:text="@string/in_fifths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fifths_button" />

            <RadioButton
                    android:text="@string/in_fourths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourths_button" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>