<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/settings_category_background"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/half_default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose_mode"
            android:id="@+id/choose_mode_title" />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/choose_mode_radio_group">

        <RadioButton
                android:text="@string/scale_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/scale_mode_explanation"
                android:id="@+id/scale_mode_radio_button" />

        <RadioButton
                android:text="@string/chord_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/chord_mode_explanation"
                android:id="@+id/rapid_fire_radio_button" />
    </RadioGroup>

</LinearLayout>