<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/settings_category_background"
        android:layout_margin="@dimen/half_default_margin"
        android:padding="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/metronome"
                android:id="@+id/imageView" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_constraint"
                android:textSize="@dimen/card_heading"
                android:id="@+id/time_constraint_title" />
    </LinearLayout>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/time_constraint_radio_group">

        <RadioButton
                android:text="@string/metronome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/metronome_explanation"
                android:id="@+id/metronome_radio_button" />

        <RadioButton
                android:text="@string/rapid_fire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/rapid_fire_explanation"
                android:id="@+id/rapid_fire_radio_button" />
    </RadioGroup>

</LinearLayout>